test/org/midica/testfiles/failing/eff-flow-note-without-effect.midica
INCLUDE inc/instruments.midica


0: note(c).vol.set(100%)
